# OlivaDiceNativeGUI

./: README.md  pyproject.toml
.github/workflows/: autoupstream.yml  main.yml
OlivaDiceNativeGUI/: GUI.py  __init__.py  app.json  data.py  imageData.py  load.py  main.py  msgCustom.py
